# noadick

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  shell.nix
src/: main.rs
